src/snapshots/block_builder__ascii_art_lib__testing__should_build_1.snap
---
source: src/ascii_art_lib.rs
expression: one
---
[[ ,  , *],
 [ ,  , *],
 [ ,  , *],
 [ ,  , *],
 [ ,  , *]]
