src/snapshots/block_builder__ascii_art_lib__testing__should_build_double_point.snap
---
source: src/ascii_art_lib.rs
expression: double_point
---
[[ ,  ,  ],
 [ , *,  ],
 [ ,  ,  ],
 [ , *,  ],
 [ ,  ,  ]]
